--- a/src/components/styles/Parallax.module.css
+++ b/src/components/styles/Parallax.module.css
@@ -2,12 +2,13 @@
 
 .container {
   height: 100%;
+  display: flex;
 }
 
 .images {
   position: relative;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  aspect-ratio: 1/0.5;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -25,7 +26,7 @@
 .images h1 {
   position: relative;
   z-index: 1;
-  font-size: 9em;
+  font-size: 9rem;
   font-family: var(--font-medieval);
   color: #02080e;
 }
