--- a/src/app/drawings/Drawings.module.css
+++ b/src/app/drawings/Drawings.module.css
@@ -1,4 +1,10 @@
-.h2{
-    font-size: 20px;
-    color: peru;
+
+.icon{
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 30px;
+}
+
+.icon:hover{
+  color: rgb(195, 173, 135);
 }
