--- a/src/components/styles/Parallax.module.css
+++ b/src/components/styles/Parallax.module.css
@@ -41,7 +41,7 @@
   width: 100%;
   height: 100px;
   z-index: 3;
-  background: linear-gradient(to top, #02080e, transparent);
+  background: linear-gradient(to top, #000000, transparent);
   filter: sepia(1);
   bottom: 0;
 }
