--- a/src/components/styles/ParallaxDrawings.module.css
+++ b/src/components/styles/ParallaxDrawings.module.css
@@ -1,12 +1,15 @@
 .container {
   display: flex;
   height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .images {
   position: relative;
+  height: 100vh;
   width: 100vw;
-  aspect-ratio: 1/0.5;
+  /* aspect-ratio: 1.778/1; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,4 +28,24 @@
 
 .telon {
   object-fit: fill !important;
+}
+
+.images::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  z-index: 3;
+  background: linear-gradient(to top, #000000, transparent);
+  bottom: 0;
+}
+
+.images::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: color;
 }
