--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -16,16 +16,22 @@
 
 .drawings {
   display: flex;
-  justify-content: flex-end;
+  justify-content:space-between;
   flex-direction: row;
   align-items: center;
 }
 
 .pictures{
   display: flex;
-  justify-content: flex-end;
-  flex-direction: row;
+  justify-content:space-between;
   align-items: center;
+}
+
+.titles{
+  margin-left: 160px;
+  font-family: var(--font-medieval);
+  font-size: 40px;
+  opacity: 0.6;
 }
 
 .icon {
@@ -36,3 +42,4 @@
 .icon:hover{
   color: rgb(195, 173, 135);
 }
+
